--- a/README.mdx
+++ b/README.mdx
@@ -1,8 +1,8 @@
-** I wrote 100% of this myself as a first draft. I then used AI to proofread and shorten some of my sentences.**
+**I wrote 100% of this myself as a first draft. I then used AI to proofread and shorten some of my sentences.**
 
 (I will include detailed notes below the 3 parts)
 
-Part 1: (20 min)
+## Part 1: (20 min)
 
 It was very easy to get started. The homepage is very TTS-heavy given it's the Sonic page. There wasn't anything on the page indicating that STT or Agents are available, so I had to go into the top navigation bar.
 
@@ -19,6 +19,7 @@ I didn't see a way to bring my own phone number from Twilio or update prompts/tr
 The playground was simple to use. I quickly generated a snippet and tried a handful of voices/words tailored to my use case. I ran into confusion with the example prompts. There was no simple way to try different ones without deleting the filled prompt, and if I select an example prompt and then change from Sonic 3 to Sonic 2, the TTS model will speak emotes like "Laughter". Also, after using a cloned voice, my "Cartesia Voices" and "All Voices" tabs were identical, and I didn’t understand the voices sorting.
 
 I liked the pronunciation and cloning options, but everything felt scattered. There are eight different pages for voice in the playground, but I imagine this could be condensed to 3–4.
+
 1. `Narration` is very similar to `Text to Speech`. Adding an option to save generations would make them functionally identical.
 2. `Voices` is identical to the *Voices* menu in `Text to Speech`.
 3. The two different cloning pages can be consolidated.
@@ -30,57 +31,74 @@ Additionally, getting started with Agents is a significant investment. Initially
 
 There was friction there.
 
-**Quick Wins:**
-- Add clear indication and navigation for Agents and STT on the homepage. (Likely low effort; major discoverability improvement.)
-- Streamline example prompt UX in Text to Speech paage so users can browse/select without deleting text. (UX tweak; easy to ship.)
+### Quick Wins
 
-**Larger Lifts:**
-- Real-time agent demo on the Agents page to showcase quality/latency. (Higher effort, but builds early trust/validation with prospective users.)
-- Rework/merge redundant playground voice pages to reduce cognitive load of side navigation bar. (Requires coordination and UI rework, bigger initiative.)
+- **Add clear indication and navigation for Agents and STT on the homepage.**  
+  (Likely low effort; major discoverability improvement.)
 
-Part 2: (30 min)
-- MKT, Weekly: Website visits, broken down by UTM parameter. Checked weekly. Useful for monitoring traffic sources and which channels are working.
-- MKT, Weekly: Page visits/Website Actions -> Sign Up – gives insight into website touchpoints that resonate most. Pages, demos, etc.
-- ACT, Weekly: Pageview -> Sign Ups -> Activations (generated 2-3 TTS snippets/made API call/created agent) – general pulse on the top of funnel. Ideally, this steadily grows over time and most sign-ups activate.
-- ACT, Weekly: API Key creations – a great leading indicator of the usage we hope for.
-- ACT, Weekly: API activations (2+ successful calls) – are users successfully running code with Cartesia's API? This signals strong intent.
-- ACT, Weekly: Github connections – a leading indicator that devs plan to build agents beyond the initial text-to-agent.
-- ACT, Weekly: Line Agent activations (2+ realtime calls on an agent) – making agents is straightforward, but multiple calls with an agent shows intent to use.
-- RET, Monthly: WAU split (New, Returning <7 days since last generation, Resurrecting >7 days since last, Churned)
-- RET, Monthly: 7 Day Retention – do users stick with the product 1–3 weeks later? This is probably the most important metric for sustained growth and satisfaction.
-- RET, Monthly: Account level growth – are accounts increasing usage week over week?
-- GEN, Monthly: WAU for each playground feature – what do people gravitate toward? What’s unused? Likewise for API calls, voices, emotes, etc. This gives an overview of overall product footprint.
-- GEN, Monthly: Minutes of generated Speech, Transcription, Realtime – general product usage over time. More usage = more value delivered.
+- **Streamline example prompt UX in Text to Speech page so users can browse/select without deleting text.**  
+  (UX tweak; easy to ship.)
 
-**Metrics Review Cadence & Audience**: Metrics are reviewed weekly in cross-functional product/leadership sync and monthly in all-hands or business review meetings. Key product-level metrics surface in dashboards visible to all teams. Feature-level or experiment-specific metrics are highlighted in retro and post-launch summaries.
+### Larger Lifts
 
-**How metrics guide future iterations:** Post-launch, these metrics directly inform prioritization, roadmap, and iteration focus (e.g., features with stalled adoption trigger UX reviews; outperforming features get upgrades and suggest new markets for GTM).
+- **Real-time agent demo on the Agents page to showcase quality/latency.**  
+  (Higher effort, but builds early trust/validation with prospective users.)
+
+- **Rework/merge redundant playground voice pages to reduce cognitive load of side navigation bar.**  
+  (Requires coordination and UI rework, bigger initiative.)
+
+## Part 2: (30 min)
+
+- **MKT, Weekly:** Website visits, broken down by UTM parameter. Checked weekly. Useful for monitoring traffic sources and which channels are working.
+- **MKT, Weekly:** Page visits/Website Actions -> Sign Up – gives insight into website touchpoints that resonate most. Pages, demos, etc.
+- **ACT, Weekly:** Pageview -> Sign Ups -> Activations (generated 2-3 TTS snippets/made API call/created agent) – general pulse on the top of funnel. Ideally, this steadily grows over time and most sign-ups activate.
+- **ACT, Weekly:** API Key creations – a great leading indicator of the usage we hope for.
+- **ACT, Weekly:** API activations (2+ successful calls) – are users successfully running code with Cartesia's API? This signals strong intent.
+- **ACT, Weekly:** Github connections – a leading indicator that devs plan to build agents beyond the initial text-to-agent.
+- **ACT, Weekly:** Line Agent activations (2+ realtime calls on an agent) – making agents is straightforward, but multiple calls with an agent shows intent to use.
+- **RET, Monthly:** WAU split (New, Returning <7 days since last generation, Resurrecting >7 days since last, Churned)
+- **RET, Monthly:** 7 Day Retention – do users stick with the product 1–3 weeks later? This is probably the most important metric for sustained growth and satisfaction.
+- **RET, Monthly:** Account level growth – are accounts increasing usage week over week?
+- **GEN, Monthly:** WAU for each playground feature – what do people gravitate toward? What’s unused? Likewise for API calls, voices, emotes, etc. This gives an overview of overall product footprint.
+- **GEN, Monthly:** Minutes of generated Speech, Transcription, Realtime – general product usage over time. More usage = more value delivered.
+
+### Metrics Review Cadence & Audience
+
+Metrics are reviewed **weekly** in cross-functional product/leadership sync and **monthly** in all-hands or business review meetings. Key product-level metrics surface in dashboards visible to all teams. Feature-level or experiment-specific metrics are highlighted in retro and post-launch summaries.
+
+**How metrics guide future iterations:**
+
+Post-launch, these metrics directly inform prioritization, roadmap, and iteration focus (e.g., features with stalled adoption trigger UX reviews; outperforming features get upgrades and suggest new markets for GTM).
 
 Evangelizing the culture comes in two ways:
+
 1. Practice what I preach. When discussing product changes or outcomes, include a relevant metric whenever possible.
 2. Every product change should mostly impact 1–2 core team metrics. Everything should help users build better AI voice agents, and the impact should be visible in those metrics. You can even gamify it so the team sees the value of their work directly.
 3. Bring metrics to the team. If there are TVs, display the main metrics. During meetings, tie asks and outcomes to metric deltas.
 
 For example, for the emotion tagging feature, the product manager and engineers should know why it’s being built (use cases that require expressive voices + increase adoption), and once released, where to view adoption and retention metrics. After a week, add a short slide to all-hands showing before/after and adoption numbers to tie real business value to the change.
 
-# Part 3: (30 min)
-What would you build?
-What metric would it impact?
-How much lift can you expect?
-If needed, note your intuition-based estimate of that metric's baseline.
+## Part 3: (30 min)
 
 My two experiment candidates, prioritized:
 
-## 1: Quick win – Email drip campaign for unengaged users
+### 1: Quick win – Email drip campaign for unengaged users
+
 Many users sign up and churn at various stages. Trigger emails based on inactivity/product actions (e.g., if 48 hrs after signup, user hasn’t generated anything, send an educational + incentive-based campaign about credits, new features, and usage examples).
-**Metric:** Activations, resurrections (WAU), conversion to paid.
+
+**Metric:** Activations, resurrections (WAU), conversion to paid.  
 **Estimated lift:** Drip campaigns can boost re-activations by 8–15%. With baseline sign-up-to-activation at ~40%, a +10% relative lift here would be substantial (~4% absolute gain on total signups).
 
-## 2: Larger bet – Allow Text-to-agent to generate code with tool calls, logic, transfer, metrics
+### 2: Larger bet – Allow Text-to-agent to generate code with tool calls, logic, transfer, metrics
+
 Currently Text-to-agent only supports single-prompt agents. Adding logic/tool-calling unlocks more real business use cases. This would likely require 4-6+ weeks of design and build.
-**Metric:** Line agent activations, new agent creation.
+
+**Metric:** Line agent activations, new agent creation.  
 **Estimated lift:** Expecting a 20–30% increase in line agent activation rate over 2 quarters, based on increased ability to build real-world agents, but this would need close monitoring and gradual rollout.
 
+**Why prioritize these over other team suggestions?**
+
+Other suggestions (like an API playground, quickstart codegen, Slack/Discord integration, usage alerting) are valuable but either address narrower user segments, have less lifecycle impact, or are more supporting than core unlocks. The experiments above directly address biggest funnel blockages and unlock the most business/usage growth for a wide range of targets.
 
 # Appendix: Detailed Feedback
 
