format idea nodes

--- a/README.mdx
+++ b/README.mdx
@@ -96,15 +96,13 @@ Currently Text-to-agent only supports single-prompt agents. Adding logic/tool-ca
 **Metric:** Line agent activations, new agent creation.  
 **Estimated lift:** Expecting a 20–30% increase in line agent activation rate over 2 quarters, based on increased ability to build real-world agents, but this would need close monitoring and gradual rollout.
 
-# Appendix: Detailed Feedback
-
-First Impressions (90 min)
+# Appendix: Initial Notes: Detailed Feedback
 
 Being that I am familiar with Cartesia, I will be assuming the persona of a developer with a medium level of familiarity with Voice Agents. I am seeking an end-to-end solution to create voice agents to handle support calls for a health tech startup in El Paso, Texas, that manages appointment scheduling for English and Spanish speakers. I have a few workflows I hope to build, each needing decision trees and tool calling. I have experimented with LiveKit, Vapi, and ElevenLabs, and have also tried OpenAI's voice stack (TTS, STT, Pipeline vs Speech-to-speech, Realtime).
 
 I saw the Sonic 3 release on X and noticed Cartesia also has a voice agents product, so I am visiting the website for the first time to learn about Sonic 3 and their voice agents product.
 
-# Part 0: Website/Dashboard First Impressions (90 min including typing)
+Website/Dashboard First Impressions (90 min including typing)
 
 ## Website Homepage
 
