format idea notes

--- a/README.mdx
+++ b/README.mdx
@@ -1,4 +1,4 @@
-**I wrote 100% of this myself as a first draft. I then used AI to proofread and shorten some of my sentences.**
+**I wrote 100% of this myself as a first draft. I then used AI to proofread and shorten some of my sentences + clean up formatting.**
 
 (I will include detailed notes below the 3 parts)
 
