--- a/README.mdx
+++ b/README.mdx
@@ -110,7 +110,7 @@ Website/Dashboard First Impressions (90 min including typing)
 
 At first glance, I'm seeing that Cartesia is primarily a text-to-speech inference provider. The homepage directs me to /sonic. The entire upper half of the homepage is centered around the new Sonic TTS model: it's fast, natural, and expressive, with voices for a variety of use cases.
 
-### Idea: As the Line and Ink products mature, create a new homepage that touches on all of these models (assuming strategically Cartesia wants to push those).
+<span style="font-size: 0.95em; color: #888;"><em>Idea: As the Line and Ink products mature, create a new homepage that touches on all of these models (assuming strategically Cartesia wants to push those).</em></span>
 
 ![Agents Powering Sonic Page](/Public/agents-powering-sonic-page.png)
 
@@ -122,7 +122,7 @@ I see there is a TTS API, as well as an SDK. I also notice SOC 2, HIPAA, and PCI
 
 There is no mention of agents (or STT for that matter) on the homepage.
 
-### Idea: Mention Line Agents and Ink STT with links so users can cmd-click to open those pages in the background.
+<span style="font-size: 0.95em; color: #888;"><em>Idea: Mention Line Agents and Ink STT with links so users can cmd-click to open those pages in the background.</em></span>
 
 ## Website Agents Page
 With a grasp of the TTS product, I see “Agents” in the header.
@@ -133,7 +133,7 @@ I'm now looking at what I hope to integrate. I see the text: "Line is a code-fir
 
 It's unclear what "Line" is: both the word and its usage, as well as "code-first ecosystem." Since I clicked Agents, I'm assuming Line is an agent builder.
 
-### Idea: Rework this slightly to something like "Line is a code-first agent builder to rapidly prototype and deploy flexible voice agents for any use case."
+<span style="font-size: 0.95em; color: #888;"><em>Idea: Rework this slightly to something like "Line is a code-first agent builder to rapidly prototype and deploy flexible voice agents for any use case."</em></span>
 
 ![Line Start Anywhere](/Public/line-start-anywhere.png)
 
@@ -143,8 +143,8 @@ This section inspires confidence that you offer what I need. My company already 
 
 I do not see any mention of tool calling (other than a hidden RAG-focused Tool Calling bullet in the "Build" section). I also see no mention of building workflows, decision trees, or handoffs. It would also be nice to talk to a realtime agent to gauge quality/latency in production. Other websites let me do that instead of just showing snippets.
 
-### Idea: Communicate tool calling and handoffs/workflows more clearly.
-### Idea: Add a realtime demo.
+<span style="font-size: 0.95em; color: #888;"><em>Idea: Communicate tool calling and handoffs/workflows more clearly.</em></span>
+<span style="font-size: 0.95em; color: #888;"><em>Idea: Add a realtime demo.</em></span>
 
 As I continue scrolling, there are a few industries listed, including Healthcare. I click on it.
 
@@ -156,7 +156,7 @@ I click "Give it a try" and am taken to a Sign Up page. Before signing up, I wan
 
 ![Sign Up Page](/Public/sign-up-page.png)
 
-### Idea: Make the menu button more clear or add simple navigation to docs/pricing. The ? suggests support, but not necessarily docs/pricing.
+<span style="font-size: 0.95em; color: #888;"><em>Idea: Make the menu button more clear or add simple navigation to docs/pricing. The ? suggests support, but not necessarily docs/pricing.</em></span>
 
 ## Website Pricing Page
 ![Pricing Main](/Public/pricing-main.png)
@@ -167,13 +167,13 @@ I see a lot of numbers: monthly fees, credits, and agent credits. I don’t thin
 
 The startup plan seems okay for my use case: 5 concurrent on TTS, 5 agent slots with 20 concurrency.
 
-### Idea: Startup Plan = 20 Agents concurrency != 5 TTS concurrency. I understand the AI isn't always talking, but these numbers should be closer.
+<span style="font-size: 0.95em; color: #888;"><em>Idea: Startup Plan = 20 Agents concurrency != 5 TTS concurrency. I understand the AI isn't always talking, but these numbers should be closer.</em></span>
 
 Pricing is somewhat difficult to calculate. There is duration-based pricing for Line Agents and STT, but usage-based pricing for the TTS model.
 
 I then return to the Sign Up page, which strongly emphasizes Sonic 3.
 
-Idea: A testimonial or more use cases/functionality could be useful here. Right now it's just another announcement about Sonic 3.
+<span style="font-size: 0.95em; color: #888;"><em>Idea: A testimonial or more use cases/functionality could be useful here. Right now it's just another announcement about Sonic 3.</em></span>
 
 ## Docs
 The Docs are very strong. Going through sequentially via the bottom nav was nice.
@@ -208,7 +208,7 @@ I'm not yet sold on using Cartesia's Agents product, but I do like the TTS produ
 
 ![Docs Formats](/Public/docs-formats.png)
 
-### Idea: Link to the different TTS endpoints in the info box shown in the screenshot.
+<span style="font-size: 0.95em; color: #888;"><em>Idea: Link to the different TTS endpoints in the info box shown in the screenshot.</em></span>
 
 ## Playground Text to Speech
 
@@ -218,7 +218,7 @@ I'm not yet sold on using Cartesia's Agents product, but I do like the TTS produ
 
 After signing up, the first thing I see is a `Text to Speech` page. I notice the banner on top announcing Sonic-3 is live. On my Macbook Air, this takes up a significant amount of screen real estate.
 
-### Idea: The banner can be shrunk to one line of text. It currently spans more than two.
+<span style="font-size: 0.95em; color: #888;"><em>Idea: The banner can be shrunk to one line of text. It currently spans more than two.</em></span>
 
 I see a strong emphasis on Voice Tools (it's the top section) on the sidebar.
 
@@ -226,13 +226,13 @@ There are a few example prompts to get started with. Some appear to be real-time
 
 This is useful, as I'm learning to use the tool and trying different examples, but when I click one example prompt, they all disappear. If I hit speak, the text remains. When I realized I needed to erase the text to get prompts back, they're different examples.
 
-### Idea: Have an example prompt library that can easily be scrolled through—or pick a set of standard example prompts. Allow selecting other example prompts without needing to delete the filled text.
+<span style="font-size: 0.95em; color: #888;"><em>Idea: Have an example prompt library that can easily be scrolled through—or pick a set of standard example prompts. Allow selecting other example prompts without needing to delete the filled text.</em></span>
 
 ![Emote Sonic 2](/Public/emote-sonic-2.png)
 
 Looking at the "Controls", I see multiple models. It defaults to Sonic 3. I was compelled to try different models, and when swapping models from Sonic 3 to Sonic 2 *after* clicking an example prompt, the emotion and emote tags remain—which is odd, since they don't work with Sonic 2. The model spoke the emote "Laughter" for Sonic 2.
 
-### Idea: When I change models, remove the emotion tags, or at least have the TTS model ignore them if incompatible and provide a warning: "model not compatible with emotion tags."
+<span style="font-size: 0.95em; color: #888;"><em>Idea: When I change models, remove the emotion tags, or at least have the TTS model ignore them if incompatible and provide a warning: "model not compatible with emotion tags."</em></span>
 
 Otherwise, controls make sense. Speed and Volume are intuitive. Transcription Language I assume lets me generate specific language snippets, even if that mismatches the voice language.
 
@@ -251,7 +251,7 @@ It starts on `All`, and then when I click "Cartesia Voices" nothing changes.
 
 When I clone a voice and use it, the `RECENTLY USED` section in the `All` panel and the `Cartesia` panel remain identical. I'd expect `All` to include the new cloned voice I just used. If I scroll down in `All`, I do eventually get to my cloned voice, but I don’t understand the default sort order.
 
-### Idea: Order the `All` voices so it’s understandable for users, and ensure the `RECENTLY USED` section in `All` reflects recently used cloned voices. On refresh, it didn't update.
+<span style="font-size: 0.95em; color: #888;"><em>Idea: Order the `All` voices so it’s understandable for users, and ensure the `RECENTLY USED` section in `All` reflects recently used cloned voices. On refresh, it didn't update.</em></span>
 
 ![My Voices TTS](/Public/my-voices-tts.png)
 
@@ -259,23 +259,23 @@ The "My Voices" panel is empty.
 
 ![My Voices Voices](/Public/my-voices-voices.png)
 
-### Idea: Add a link to the cloning page in the empty state so users can create their own voice if they want. Same situation for "Starred." Instead of an empty state, give a CTA to `Star` favorite voices for easy access. This already exists for the empty state of `My Voices` on the `Voices` page.
+<span style="font-size: 0.95em; color: #888;"><em>Idea: Add a link to the cloning page in the empty state so users can create their own voice if they want. Same situation for "Starred." Instead of an empty state, give a CTA to `Star` favorite voices for easy access. This already exists for the empty state of `My Voices` on the `Voices` page.</em></span>
 
 I like that on the Voices page, I can play a snippet from the list, but to get the voice ID I have to perform two clicks—one opens a menu with "Copy ID" and "Copy Link" options. The "Copy Link" URL takes me to a page that doesn’t display anything I can’t already see on the Text To Speech page.
 
-### Idea: Remove the "Copy Link" option and simply have a button to "Copy ID" at the top level for every voice.
+<span style="font-size: 0.95em; color: #888;"><em>Idea: Remove the "Copy Link" option and simply have a button to "Copy ID" at the top level for every voice.</em></span>
 
 ## Other Voice Tools
 
 Clicking through other voice tools quickly, the cloning options make sense. Localize voice I don’t fully understand—and there's nothing explaining it on the page. Voice changer is similar, I can intuit what it means, but it's unclear.
 
-### Idea: Add some text to explain the localizing and voice changer pages.
+<span style="font-size: 0.95em; color: #888;"><em>Idea: Add some text to explain the localizing and voice changer pages.</em></span>
 
 ## Library
 
 I see there’s a separate `Library` section. I feel `Voices` could stand alone or be combined with `Text to Speech`. `Pronunciation` is definitely a good candidate for `Voice Tools.`
 
-### Idea: The sidebar can be consolidated to `Voice`, `Line`, and `Platform`. `Voice` can contain everything it currently does plus `Pronunciation`. The `Voices` and `Text to Speech` pages can be consolidated (the primary value to users is finding a voice they like and generating snippets), and `Narration`, unless highly utilized, seems redundant and tries to compete with ElevenLabs.
+<span style="font-size: 0.95em; color: #888;"><em>Idea: The sidebar can be consolidated to `Voice`, `Line`, and `Platform`. `Voice` can contain everything it currently does plus `Pronunciation`. The `Voices` and `Text to Speech` pages can be consolidated (the primary value to users is finding a voice they like and generating snippets), and `Narration`, unless highly utilized, seems redundant and tries to compete with ElevenLabs.</em></span>
 
 ## Studio
 
@@ -290,17 +290,17 @@ First I tried Text-to-agent, and as far as I can tell, all it did was use what I
 
 ![Text to Agent Prompting](/Public/text-to-agent-prompting.png)
 
-### Idea: Users will want a warm start with Text-to-agent. It doesn't provide much value currently, but with tool-calling and code editing it could. Generally, tool-calling feels like a big opportunity.
+<span style="font-size: 0.95em; color: #888;"><em>Idea: Users will want a warm start with Text-to-agent. It doesn't provide much value currently, but with tool-calling and code editing it could. Generally, tool-calling feels like a big opportunity.</em></span>
 
 Then I tried "Connect your code".
 
 I connected my Github and was asked to link a repo. I didn't have one, so backed out of that menu.
 
-### Idea: For FTUX, maybe pre-seed new accounts with a starter agent. The current text-to-agent doesn't provide much value, so having users go through these steps is low ROI. Another idea is to nudge them toward a template. Instead of just saying "empty" when there are no agents, provide a CTA.
+<span style="font-size: 0.95em; color: #888;"><em>Idea: For FTUX, maybe pre-seed new accounts with a starter agent. The current text-to-agent doesn't provide much value, so having users go through these steps is low ROI. Another idea is to nudge them toward a template. Instead of just saying "empty" when there are no agents, provide a CTA.</em></span>
 
 Then, the templates available are of mixed value. The Basic Chat was fine but basic. The Form Filler was very good and thorough.
 
 ### Idea: I didn’t see any transfer logic or ability to update agent prompts.
-### Idea: Link to the GitHub repo from the Cartesia dashboard.
+<span style="font-size: 0.95em; color: #888;"><em>Idea: I didn’t see any transfer logic or ability to update agent prompts.</em></span>
 
 The repo itself is clear. Good README, clean code. My only gripe is how much code there is—it’s very low level, which makes rapid testing harder. I can use Cursor to make edits, which solves most of that problem.
