--- a/README.mdx
+++ b/README.mdx
@@ -240,7 +240,7 @@ Otherwise, controls make sense. Speed and Volume are intuitive. Transcription La
 
 When I use Sonic 3, emotions (reflected by different emojis) don't show in the text box, but they highlight on the sidebar, which I assume means they’re working.
 
-### Idea: The emoji buttons on the `Text to Speech` page should add the text tag in the text box. Right now users can add a text tag or use the emoji. If Cartesia wants to train users on text tags, tags should always be shown in the text box.
+<span style="font-size: 0.95em; color: #888;"><em>Idea: The emoji buttons on the `Text to Speech` page should add the text tag in the text box. Right now users can add a text tag or use the emoji. If Cartesia wants to train users on text tags, tags should always be shown in the text box.</em></span>
 
 I clicked "Voice", which looks like a dropdown, but then a modal appears.
 
