no agents found

--- a/README.mdx
+++ b/README.mdx
@@ -296,7 +296,7 @@ Then I tried "Connect your code".
 
 I connected my Github and was asked to link a repo. I didn't have one, so backed out of that menu.
 
-<span style="font-size: 0.95em; color: #888;"><em>Idea: For FTUX, maybe pre-seed new accounts with a starter agent. The current text-to-agent doesn't provide much value, so having users go through these steps is low ROI. Another idea is to nudge them toward a template. Instead of just saying "empty" when there are no agents, provide a CTA.</em></span>
+<span style="font-size: 0.95em; color: #888;"><em>Idea: For FTUX, maybe pre-seed new accounts with a starter agent. The current text-to-agent doesn't provide much value, so having users go through these steps is low ROI. Another idea is to nudge them toward a template. Instead of just saying "No Agents Found" when there are no agents, provide a CTA.</em></span>
 
 Then, the templates available are of mixed value. The Basic Chat was fine but basic. The Form Filler was very good and thorough.
 
